style(search results panel): fix panel and search result layouts
Fix panel so that the content scrolls when it overflows the height. Fix layout of the search result
icon and content.

--- a/src/common/components/Panel/styles.scss
+++ b/src/common/components/Panel/styles.scss
@@ -30,6 +30,6 @@
 }
 
 .panel__content {
-  height: inherit;
-  overflow-y: scroll;
+  height: 100%;
+  overflow: hidden;
 }
