--- a/src/common/components/SearchResult/styles.scss
+++ b/src/common/components/SearchResult/styles.scss
@@ -1,3 +1,14 @@
 .search-result {
+  display: flex;
+}
 
+.search-result__icon {
+  width: 50px;
+  height: 50px;
+  color: #808080;
+  text-align: center;
+}
+
+.search-result__content {
+  flex: 1 1 auto;
 }
